--- a/handout-beginner.tex
+++ b/handout-beginner.tex
@@ -282,7 +282,7 @@ split a figure in several subplots (named {\em Axes}): \medskip
 \subsection*{\rmfamily Explore}
 % -----------------------------------------------------------------------------
 
-Figures are shown with a graphical user interface that alllows to zoom
+Figures are shown with a graphical user interface that allows to zoom
 and pan the figure, to navigate between the different views and to
 show the value under the mouse.
 
