--- a/handout-tips.tex
+++ b/handout-tips.tex
@@ -233,9 +233,9 @@ You can achieve nice visual effect with thick hatch patterns.
 
 \subsection*{\rmfamily Read the documentation}
 
-Matplotlib comes with an extensive documenation explaining every
-detals of each command and is generally accompanied by examples
-with. Together with the huge online gallery, this documenation is a
+Matplotlib comes with an extensive documentation explaining the
+details of each command and is generally accompanied by examples.
+Together with the huge online gallery, this documentation is a
 gold-mine.
 
 \vfill
