--- a/handout-beginner.tex
+++ b/handout-beginner.tex
@@ -123,7 +123,7 @@ Matplotlib offers several kind of plots (see Gallery): \medskip
 % -----------------------------------------------------------------------------
 \begin{tabular}{@{}m{.821\linewidth}m{.169\linewidth}}
 \begin{lstlisting}[belowskip=-\baselineskip]
- Z = np.random.uniform(0, 1, (8,8)
+ Z = np.random.uniform(0, 1, (8,8))
 
  ax.imshow(Z)
 \end{lstlisting}
@@ -132,7 +132,7 @@ Matplotlib offers several kind of plots (see Gallery): \medskip
 % -----------------------------------------------------------------------------
 \begin{tabular}{@{}m{.821\linewidth}m{.169\linewidth}}
 \begin{lstlisting}[belowskip=-\baselineskip]
- Z = np.random.uniform(0, 1, (8,8)
+ Z = np.random.uniform(0, 1, (8,8))
 
  ax.contourf(Z)
 \end{lstlisting}
