Consistent capitalization of section titles

--- a/cheatsheets.tex
+++ b/cheatsheets.tex
@@ -754,7 +754,7 @@
   %
   \vspace{\fill}
   %
-  \begin{myboxed}{Ten Simple Rules \hfill
+  \begin{myboxed}{Ten simple rules \hfill
       \READ{https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1003833}}
     1. Know Your Audience\\
     2. Identify Your Message\\
