--- a/handout-intermediate.tex
+++ b/handout-intermediate.tex
@@ -135,7 +135,7 @@ the actual figure. Each element can be modified. \medskip
 \includegraphics[width=\linewidth]{sine-marker.pdf}
 
 % -----------------------------------------------------------------------------
-\subsection*{\rmfamily Scales \& Projections}
+\subsection*{\rmfamily Scales \& projections}
 
 \begin{lstlisting}
  fig, ax = plt.subplots()
@@ -144,7 +144,7 @@ the actual figure. Each element can be modified. \medskip
 \end{lstlisting}
 \includegraphics[width=\linewidth]{sine-logscale.pdf}
 
-\subsection*{\rmfamily Text \& Ornaments}
+\subsection*{\rmfamily Text \& ornaments}
 \begin{lstlisting}[]
  ax.fill_betweenx([-1,1],[0],[2*np.pi])
  ax.text(0, -1, r" Period $\Phi$")
