--- a/handout-tips.tex
+++ b/handout-tips.tex
@@ -189,7 +189,7 @@ You can use overlaid axes with different projections.
 \end{tabular}
 
 \subsection*{\rmfamily Colorbar adjustment}
-You can adjust a colorbar's aspect ratio when adding it.
+You can adjust a colorbar's size when adding it.
 
 \begin{tabular}{@{}m{.754\linewidth}m{.236\linewidth}}
 \begin{lstlisting}[belowskip=-\baselineskip]
