Fix typo and add a couple missing commas.

--- a/cheatsheets.tex
+++ b/cheatsheets.tex
@@ -770,7 +770,7 @@
 \end{multicols*}
 
 \begin{multicols*}{5}
-  \begin{myboxed}{Axes adjustements\hfill
+  \begin{myboxed}{Axes adjustments\hfill
       \API{https://matplotlib.org/api/_as_gen/matplotlib.pyplot.subplots_adjust.html}}
     plt.\textbf{subplot\_adjust}( … )\\
 
