--- a/handout-beginner.tex
+++ b/handout-beginner.tex
@@ -225,7 +225,7 @@ titles, etc. \medskip
 \subsection*{\rmfamily Organize}
 % -----------------------------------------------------------------------------
 
-You can plot several data on the the same figure but you can also
+You can plot several data on the the same figure, but you can also
 split a figure in several subplots (named {\em Axes}): \medskip
 
 % -----------------------------------------------------------------------------
