--- a/handout-intermediate.tex
+++ b/handout-intermediate.tex
@@ -174,7 +174,7 @@ the actual figure. Each element can be modified. \medskip
 % -----------------------------------------------------------------------------
 \subsection*{\rmfamily Colors}
 
-Any color can be used but Matplotlib offers sets of colors:\\
+Any color can be used, but Matplotlib offers sets of colors:\\
 \includegraphics[width=\linewidth]{colors-cycle.pdf} \smallskip
 \includegraphics[width=\linewidth]{colors-grey.pdf}\\
 %As well as nice colormaps (viridis an magma):\\
