--- a/handout-tips.tex
+++ b/handout-tips.tex
@@ -97,7 +97,7 @@ used to delineate a frontier.
 
 % -----------------------------------------------------------------------------
 \subsection*{\rmfamily Rasterization}
-If your figure has many graphical elements such as a huge
+If your figure has many graphical elements, such as a huge
 scatter, you can rasterize them to save memory and keep other elements
 in vector format.
 \begin{lstlisting}
