Make legend numbers consistend with documentatipn (see #38)

--- a/cheatsheets.tex
+++ b/cheatsheets.tex
@@ -921,20 +921,20 @@
                        p{0.33\columnwidth}
                        p{0.33\columnwidth}@{}}
       \scriptsize \rule{0pt}{1.25em}\noindent
-      1: lower left  & 2: lower center & 3: lower right\\
-      4: center left & 5: center       & 6: center right\\
-      7: upper left  & 8: upper center & 9: upper right\\
+      2: upper left  & 9: upper center  & 1: upper right\\
+      6: center left & 10: center       & 7: center right\\
+      3: lower left  & 8: lower center  & 4: lower right\\
     \end{tabular}
 
     \begin{tabular}{@{}p{0.495\columnwidth}
                        p{0.495\columnwidth}@{}}
       \scriptsize \rule{0pt}{1.25em}\noindent
-      A: upper right /  {\ttfamily (-.1,.9)} & B: center right / {\ttfamily (-.1,.5)}\\
-      C: lower right /  {\ttfamily (-.1,.1)} & D: upper left /   {\ttfamily (.1,-.1)}\\
-      E: upper center / {\ttfamily (.5,-.1)} & F: upper right /  {\ttfamily (.9,-.1)}\\
-      G: lower left /   {\ttfamily (1.1,.1)} & H: center left /  {\ttfamily (1.1,.5)}\\
-      I: upper left /   {\ttfamily (1.1,.9)} & J: lower right /  {\ttfamily (.9,1.1)}\\
-      K: lower center / {\ttfamily (.5,1.1)} & L: lower left /   {\ttfamily (.1,1.1)}
+      \tiny A: upper right /  {\ttfamily (-0.1,0.9)} & \tiny B: center right / {\ttfamily (-0.1,0.5)}\\
+      \tiny C: lower right /  {\ttfamily (-0.1,0.1)} & \tiny D: upper left /   {\ttfamily (0.1,-0.1)}\\
+      \tiny E: upper center / {\ttfamily (0.5,-0.1)} & \tiny F: upper right /  {\ttfamily (0.9,-0.1)}\\
+      \tiny G: lower left /   {\ttfamily (1.1,0.1)} & \tiny H: center left /  {\ttfamily (1.1,0.5)}\\
+      \tiny I: upper left /   {\ttfamily (1.1,0.9)} & \tiny J: lower right /  {\ttfamily (0.9,1.1)}\\
+      \tiny K: lower center / {\ttfamily (0.5,1.1)} & \tiny L: lower left /   {\ttfamily (0.1,1.1)}
     \end{tabular}  
   \end{myboxed}
   %
