Fix stackoverflow link

--- a/cheatsheets.tex
+++ b/cheatsheets.tex
@@ -321,7 +321,7 @@
          {discourse.matplotlib.org}\\
     \includegraphics[height=.75em]{stack-overflow.pdf}
     \href{https://stackoverflow.com/questions/tagged/matplotlib}
-         {stackoverflow.com/matplotlib}\\
+         {stackoverflow.com/questions/tagged/matplotlib}\\
     \includegraphics[height=.75em]{gitter.pdf}
     \href{https://gitter.im/matplotlib/matplotlib}
          {gitter.im/matplotlib}\\
