--- a/cheatsheets.tex
+++ b/cheatsheets.tex
@@ -772,7 +772,7 @@
 \begin{multicols*}{5}
   \begin{myboxed}{Axes adjustments\hfill
       \API{https://matplotlib.org/api/_as_gen/matplotlib.pyplot.subplots_adjust.html}}
-    plt.\textbf{subplot\_adjust}( … )\\
+    plt.\textbf{subplots\_adjust}( … )\\
 
     \includegraphics[width=\columnwidth]{adjustments.pdf}
   \end{myboxed}
