standardize fontspec formatting in tex source

--- a/cheatsheets.tex
+++ b/cheatsheets.tex
@@ -51,35 +51,40 @@
 \usepackage[babel=true]{microtype}
 \defaultfontfeatures{Ligatures=TeX}
 \setmainfont{Source Serif Pro}[
-  Path = fonts/source-serif-pro/SourceSerifPro-, Extension = .otf,
-  UprightFont= Light,
-  ItalicFont = LightIt,
-  BoldFont   = Regular,
-  BoldItalicFont = It]
-\setsansfont{Roboto}[
-  Path = fonts/roboto/Roboto-, Extension = .ttf,
-  UprightFont = Light,
-  ItalicFont = LightItalic,
-  BoldFont = Regular ]
-\setmonofont{Source Code Pro}[
-  Path = fonts/source-code-pro/SourceCodePro-, Extension = .otf,
-  UprightFont = Light,
-  BoldFont = Regular ]
-\newfontfamily\RobotoCon{Roboto Condensed}[
-  Path = fonts/roboto/RobotoCondensed-, Extension = .ttf,
-  UprightFont = Regular,
-  ItalicFont = Italic,
-  BoldFont = Bold ]
-\newfontfamily\RobotoSlab{Robot Slab} [
-  Path           = fonts/roboto-slab/RobotoSlab-,
-  Extension      = .ttf,
+  Path           = fonts/source-serif-pro/SourceSerifPro-,
+  Extension      = .otf,
   UprightFont    = Light,
-  BoldFont       = Regular ]
-\newfontfamily\Roboto{Roboto}[
-  Path = fonts/roboto/Roboto-, Extension = .ttf,
+  ItalicFont     = LightIt,
+  BoldFont       = Regular,
+  BoldItalicFont = It ]
+\setsansfont{Roboto}[
+  Path        = fonts/roboto/Roboto-,
+  Extension   = .ttf,
+  UprightFont = Light,
+  ItalicFont  = LightItalic,
+  BoldFont    = Regular ]
+\setmonofont{Source Code Pro}[
+  Path        = fonts/source-code-pro/SourceCodePro-,
+  Extension   = .otf,
+  UprightFont = Light,
+  BoldFont    = Regular ]
+\newfontfamily\RobotoCon{Roboto Condensed}[
+  Path        = fonts/roboto/RobotoCondensed-,
+  Extension   = .ttf,
   UprightFont = Regular,
-  ItalicFont = Italic,
-  BoldFont = Black ]
+  ItalicFont  = Italic,
+  BoldFont    = Bold ]
+\newfontfamily\RobotoSlab{Robot Slab} [
+  Path        = fonts/roboto-slab/RobotoSlab-,
+  Extension   = .ttf,
+  UprightFont = Light,
+  BoldFont    = Regular ]
+\newfontfamily\Roboto{Roboto}[
+  Path        = fonts/roboto/Roboto-,
+  Extension   = .ttf,
+  UprightFont = Regular,
+  ItalicFont  = Italic,
+  BoldFont    = Black ]
 
 % --- Arrays ------------------------------------------------------------------
 \usepackage{multicol}
