typo in font name (Robot -> Roboto)

--- a/cheatsheets.tex
+++ b/cheatsheets.tex
@@ -74,7 +74,7 @@
   UprightFont = Regular,
   ItalicFont  = Italic,
   BoldFont    = Bold ]
-\newfontfamily\RobotoSlab{Robot Slab} [
+\newfontfamily\RobotoSlab{Roboto Slab}[
   Path        = fonts/roboto-slab/RobotoSlab-,
   Extension   = .ttf,
   UprightFont = Light,
