update URLs to "stable"

--- a/cheatsheets.tex
+++ b/cheatsheets.tex
@@ -293,14 +293,14 @@
   \begin{myboxed}{Subplots layout \hfill
       \API{https://matplotlib.org/tutorials/intermediate/gridspec.html} }
   \plot{layout-subplot.pdf}{\textbf{subplot[s]}(rows,cols,…)}
-       {https://matplotlib.org/api/_as_gen/matplotlib.pyplot.subplots.html}
+       {https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.subplots.html}
        {\ttfamily fig, axs = plt.subplots(3,3)}
        {}
   \plot{layout-gridspec.pdf}{G = \textbf{gridspec}(rows,cols,…)}
-       {https://matplotlib.org/api/_as_gen/matplotlib.gridspec.GridSpec.html}
+       {https://matplotlib.org/stable/api/_as_gen/matplotlib.gridspec.GridSpec.html}
        {\ttfamily ax = G[0,:]}{}
   \plot{layout-inset.pdf}{ax.\textbf{inset\_axes}(extent)}
-       {https://matplotlib.org/api/_as_gen/matplotlib.axes.Axes.inset_axes.html}
+       {https://matplotlib.org/stable/api/_as_gen/matplotlib.axes.Axes.inset_axes.html}
        {}{}
   \plot{layout-divider.pdf}{d=\textbf{make\_axes\_locatable}(ax)}
        {https://matplotlib.org/mpl_toolkits/axes_grid/users/axes_divider.html}
@@ -337,7 +337,7 @@
   % --- Basic plots -----------------------------------------------------------
   \begin{myboxed}{Basic plots}
   \plot{basic-plot.pdf}{\textbf{plot}([X],Y,[fmt],…)}
-       {https://matplotlib.org/api/_as_gen/matplotlib.pyplot.plot.html}
+       {https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.plot.html}
        {\optional{X},
         \mandatory{Y},
         \optional{fmt},
@@ -346,7 +346,7 @@
         \optional{linestyle}}
        {}
   \plot{basic-scatter.pdf}{\textbf{scatter}(X,Y,…)}
-       {https://matplotlib.org/api/_as_gen/matplotlib.pyplot.scatter.html}
+       {https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.scatter.html}
        {\mandatory{X},
         \mandatory{Y},
         \optional{[s]izes},
@@ -355,7 +355,7 @@
         \optional{cmap}}
        {}
   \plot{basic-bar.pdf}{\textbf{bar[h]}(x,height,…)}
-       {https://matplotlib.org/api/_as_gen/matplotlib.pyplot.bar.html}
+       {https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.bar.html}
        { \mandatory{x},
          \mandatory{height},
          \optional{width},
@@ -363,7 +363,7 @@
          \optional{align},
          \optional{color} }{}
   \plot{basic-imshow.pdf}{\textbf{imshow}(Z,[cmap],…)}
-       {https://matplotlib.org/api/_as_gen/matplotlib.pyplot.imshow.html}
+       {https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.imshow.html}
        { \mandatory{Z},
          \optional{cmap},
          \optional{interpolation},
@@ -371,7 +371,7 @@
          \optional{origin} }
        {}
   \plot{basic-contour.pdf}{\textbf{contour[f]}([X],[Y],Z,,…)}
-       {https://matplotlib.org/api/_as_gen/matplotlib.pyplot.contour.html}
+       {https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.contour.html}
        { \optional{X},
          \optional{Y},
          \mandatory{Z},
@@ -381,7 +381,7 @@
          \optional{origin} }
        {}
   \plot{basic-quiver.pdf}{\textbf{quiver}([X],[Y],U,V,…)}
-     {https://matplotlib.org/api/_as_gen/matplotlib.pyplot.quiver.html}
+     {https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.quiver.html}
      { \optional{X},
        \optional{Y},
        \mandatory{U},
@@ -391,7 +391,7 @@
        \optional{angles} }
      {}
   \plot{basic-pie.pdf}{\textbf{pie}(X,[explode],…)}
-       {https://matplotlib.org/api/_as_gen/matplotlib.pyplot.pie.html}
+       {https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.pie.html}
        {\mandatory{Z},
          \optional{explode},
          \optional{labels},
@@ -399,7 +399,7 @@
          \optional{radius}}
        {}
    \plot{basic-text.pdf}{\textbf{text}(x,y,text,…)}
-       {https://matplotlib.org/api/_as_gen/matplotlib.pyplot.text.html}
+       {https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.text.html}
        {\mandatory{x},
         \mandatory{y},
         \mandatory{text},
@@ -410,7 +410,7 @@
         \optional{transform} }
        {}
    \plot{basic-fill.pdf}{\textbf{fill[\_between][x]}( … )}
-       {https://matplotlib.org/api/_as_gen/matplotlib.pyplot.fill.html}
+       {https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.fill.html}
        {\mandatory{X},
         \optional{Y1},
         \optional{Y2},
@@ -422,7 +422,7 @@
   % --- Advanced plots --------------------------------------------------------
   \begin{myboxed}{Advanced plots}
   \plot{advanced-step.pdf}{\textbf{step}(X,Y,[fmt],…)}
-     {https://matplotlib.org/api/_as_gen/matplotlib.pyplot.step.html}
+     {https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.step.html}
      {\mandatory{X},
       \mandatory{Y},
       \optional{fmt},
@@ -431,7 +431,7 @@
       \optional{where} }
      {}
   \plot{advanced-boxplot.pdf}{\textbf{boxplot}(X,…)}
-     {https://matplotlib.org/api/_as_gen/matplotlib.pyplot.boxplot.html}
+     {https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.boxplot.html}
      { \mandatory{X},
        \optional{notch},
        \optional{sym},
@@ -439,7 +439,7 @@
        \optional{widths} }
      {}
   \plot{advanced-errorbar.pdf}{\textbf{errorbar}(X,Y,xerr,yerr,…)}
-     {https://matplotlib.org/api/_as_gen/matplotlib.pyplot.errorbar.html}
+     {https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.errorbar.html}
      { \mandatory{X},
        \mandatory{Y},
        \optional{xerr},
@@ -447,7 +447,7 @@
        \optional{fmt} }
      {}
   \plot{advanced-hist.pdf}{\textbf{hist}(X, bins, …)}
-     {https://matplotlib.org/api/_as_gen/matplotlib.pyplot.hist.html}
+     {https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.hist.html}
      {\mandatory{X},
       \optional{bins},
       \optional{range},
@@ -455,14 +455,14 @@
       \optional{weights}}
      {}
   \plot{advanced-violin.pdf}{\textbf{violinplot}(D,…)}
-     {https://matplotlib.org/api/_as_gen/matplotlib.axes.Axes.violinplot.html}
+     {https://matplotlib.org/stable/api/_as_gen/matplotlib.axes.Axes.violinplot.html}
      {\mandatory{D},
       \optional{positions},
       \optional{widths},
       \optional{vert} }
      {}
   \plot{advanced-barbs.pdf}{\textbf{barbs}([X],[Y], U, V, …)}
-     {https://matplotlib.org/api/_as_gen/matplotlib.pyplot.barbs.html}
+     {https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.barbs.html}
      { \optional{X},
        \optional{Y},
        \mandatory{U},
@@ -473,13 +473,13 @@
        \optional{sizes} }
      {}
   \plot{advanced-event.pdf}{\textbf{eventplot}(positions,…)}
-     {https://matplotlib.org/api/_as_gen/matplotlib.pyplot.eventplot.html}
+     {https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.eventplot.html}
      {\mandatory{positions},
        \optional{orientation},
        \optional{lineoffsets} }
      {}
   \plot{advanced-hexbin.pdf}{\textbf{hexbin}(X,Y,C,…)}
-     {https://matplotlib.org/api/_as_gen/matplotlib.pyplot.hexbin.html}
+     {https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.hexbin.html}
      {\mandatory{X},
       \mandatory{Y},
       \optional{C},
@@ -487,7 +487,7 @@
        \optional{bins} }
      {}
   \plot{advanced-xcorr.pdf}{\textbf{xcorr}(X,Y,…)}
-     {https://matplotlib.org/api/_as_gen/matplotlib.pyplot.xcorr.html}
+     {https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.xcorr.html}
      {\mandatory{X},
       \mandatory{Y},
       \optional{normed},
@@ -498,7 +498,7 @@
 
   % --- Scale ---------------------------------------------------------------
   \begin{myboxed}{Scales \hfill
-    \API{https://matplotlib.org/api/scale_api.html}}
+    \API{https://matplotlib.org/stable/api/scale_api.html}}
   {\ttfamily ax.\textbf{set\_[xy]scale}(scale,…)}
   \smallskip
   \scale{scale-linear.pdf}{\textbf{linear}}{any values}
@@ -511,20 +511,20 @@
   %
   % --- Projections -----------------------------------------------------------
   \begin{myboxed}{Projections \hfill
-      \API{https://matplotlib.org/api/projections_api.html}}
+      \API{https://matplotlib.org/stable/api/projections_api.html}}
   {\ttfamily \textbf{subplot}(…,projection=p)}
   \smallskip
   \scale{projection-polar.pdf}{p='polar'}{}
   \scale{projection-3d.pdf}{p='3d'}{}
-%       {https://matplotlib.org/api/projections_api.html}
+%       {https://matplotlib.org/stable/api/projections_api.html}
 %       {}
 %       {}
   %% \plot{projection-3d.pdf}{p='3d'}
-  %%      {https://matplotlib.org/api/toolkits/mplot3d.html}
+  %%      {https://matplotlib.org/stable/api/toolkits/mplot3d.html}
   %%      {}
   %%      {}
   \plot{projection-cartopy.pdf}{p=Orthographic()}
-       {https://matplotlib.org/api/toolkits/mplot3d.html}
+       {https://matplotlib.org/stable/api/toolkits/mplot3d.html}
        {from cartopy.crs import Cartographic}
        {}
   \end{myboxed}
@@ -541,7 +541,7 @@
   %
   % --- Markers ---------------------------------------------------------------
   \begin{myboxed}{Markers \hfill
-                \API{https://matplotlib.org/api/markers_api.html}}
+                \API{https://matplotlib.org/stable/api/markers_api.html}}
       \includegraphics[width=\columnwidth]{markers.pdf}
   \end{myboxed}
   %
@@ -591,7 +591,7 @@
 
   % --- Ticks locators --------------------------------------------------------
   \begin{myboxed}{Tick locators \hfill
-    \API{https://matplotlib.org/api/ticker_api.html}}
+    \API{https://matplotlib.org/stable/api/ticker_api.html}}
     {\tiny \ttfamily
       from matplotlib import ticker\\
       ax.[xy]axis.set\_[minor|major]\_locator(\textbf{locator})\par
@@ -603,7 +603,7 @@
   \vspace{\fill}
   %
   \begin{myboxed}{Tick formatters \hfill
-    \API{https://matplotlib.org/api/ticker_api.html}}
+    \API{https://matplotlib.org/stable/api/ticker_api.html}}
     {\tiny \ttfamily
       from matplotlib import ticker\\
       ax.[xy]axis.set\_[minor|major]\_formatter(\textbf{formatter})\par
@@ -616,19 +616,19 @@
   %
   \begin{myboxed}{Ornaments}
     {\ttfamily ax.\textbf{legend}(…) \hfill
-    \api{https://matplotlib.org/api/_as_gen/matplotlib.pyplot.legend.html}}\\
+    \api{https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.legend.html}}\\
      handles, labels, loc, title, frameon\smallskip\\
     \includegraphics[width=0.9\columnwidth]{legend.pdf}
     \medskip\\
     %
     {\ttfamily ax.\textbf{colorbar}(…)} \hfill
-    \api{https://matplotlib.org/api/_as_gen/matplotlib.pyplot.colorbar.html}\\
+    \api{https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.colorbar.html}\\
     mappable, ax, cax, orientation \smallskip\\
     \includegraphics[width=\columnwidth]{colorbar.pdf}\\
     \medskip\\
     %
     {\ttfamily ax.\textbf{annotate}(…)} \hfill
-    \api{https://matplotlib.org/api/_as_gen/matplotlib.pyplot.annotate.html}\\
+    \api{https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.annotate.html}\\
     \mandatory{text},
     \mandatory{xy},
     \mandatory{xytext},
@@ -658,7 +658,7 @@
   % \vspace{\fill}
   %
   \begin{myboxed}{Animation \hfill
-      \API{https://matplotlib.org/api/animation_api.html}}
+      \API{https://matplotlib.org/stable/api/animation_api.html}}
   {\ttfamily \scriptsize
   import matplotlib.animation as mpla\par
   ~\par
@@ -771,7 +771,7 @@
 
 \begin{multicols*}{5}
   \begin{myboxed}{Axes adjustments\hfill
-      \API{https://matplotlib.org/api/_as_gen/matplotlib.pyplot.subplots_adjust.html}}
+      \API{https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.subplots_adjust.html}}
     plt.\textbf{subplots\_adjust}( … )\\
 
     \includegraphics[width=\columnwidth]{adjustments.pdf}
@@ -899,7 +899,7 @@
 
 
   \begin{myboxed}{Color names \hfill
-      \API{https://matplotlib.org/api/colors_api.html} }
+      \API{https://matplotlib.org/stable/api/colors_api.html} }
     \includegraphics[width=\columnwidth]{colornames.pdf}
   \end{myboxed}
   %
