update and build handouts

--- a/handout-intermediate.tex
+++ b/handout-intermediate.tex
@@ -76,7 +76,7 @@
 A matplotlib figure is composed of a hierarchy of elements that forms
 the actual figure. Each element can be modified. \medskip
 
-\includegraphics[width=\linewidth]{anatomy-cropped.pdf}
+\includegraphics[width=\linewidth]{anatomy.pdf}
 
 \subsection*{\rmfamily Figure, axes \& spines}
 
