--- a/handout-tips.tex
+++ b/handout-tips.tex
@@ -86,8 +86,8 @@ used to delineate a frontier.
 
 \begin{tabular}{@{}m{.774\linewidth}m{.216\linewidth}}
 \begin{lstlisting}[belowskip=-\baselineskip]
- X = np.random.normal(-1,1,500)
- Y = np.random.normal(-1,1,500)
+ X = np.random.normal(-1, 1, 500)
+ Y = np.random.normal(-1, 1, 500)
  ax.scatter(X, Y, 50, "0.0", lw=2) # optional
  ax.scatter(X, Y, 50, "1.0", lw=0) # optional
  ax.scatter(X, Y, 40, "C1",  lw=0, alpha=0.1)
