use generated logo in cheatsheets

--- a/cheatsheets.tex
+++ b/cheatsheets.tex
@@ -261,7 +261,7 @@
 
 \begin{multicols*}{5}
 
-  \includegraphics[width=\columnwidth]{matplotlib.pdf}
+  \includegraphics[width=\columnwidth]{mpl-logo2.pdf}
   %\textbf{\Large \RobotoCon Matplotlib 3.2 cheat sheet}\\
   %{\ttfamily https://matplotlib.org} \hfill CC-BY 4.0
   % \bigskip
