--- a/handout-intermediate.tex
+++ b/handout-intermediate.tex
@@ -182,6 +182,7 @@ Any color can be used, but Matplotlib offers sets of colors:\\
 %\includegraphics[width=\linewidth]{colormap-magma.pdf} \medskip
 
 % -----------------------------------------------------------------------------
+\vspace{-1em}
 \subsection*{\rmfamily Size \& DPI}
 
 Consider a square figure to be included in a two-columns A4 paper with
@@ -196,7 +197,7 @@ should be 3.15$\times$3.15 in.
 
 \vfill
 %
-{\scriptsize Matplotlib 3.2 handout for intermediate users. Copyright
+{\scriptsize Matplotlib 3.4.2 handout for intermediate users. Copyright
   (c) 2020 Nicolas P. Rougier. Released under a CC-BY 4.0
   License. Supported by NumFocus Grant \#12345.\par}
 
