--- a/cheatsheets.tex
+++ b/cheatsheets.tex
@@ -1038,7 +1038,8 @@
   \end{myboxed}
   %
   \begin{center}
-  \href{https://github.com/matplotlib/cheatsheets}{Matplotlib Cheatsheets} (c) 2020 Nicolas P. Rougier\\
+  \href{https://github.com/matplotlib/cheatsheets}{Matplotlib Cheatsheets}\\
+  Copyright (c) 2021 Matplotlib Development Team\\
   Released under a CC-BY 4.0 International License\\
   \smallskip
   \includegraphics[width=\columnwidth]{numfocus.png}
