--- a/handout-intermediate.tex
+++ b/handout-intermediate.tex
@@ -197,9 +197,12 @@ should be 3.15$\times$3.15 in.
 
 \vfill
 %
-{\scriptsize Matplotlib 3.4.2 handout for intermediate users. Copyright
-  (c) 2020 Nicolas P. Rougier. Released under a CC-BY 4.0
-  License. Supported by NumFocus Grant \#12345.\par}
+{\scriptsize
+  Matplotlib 3.4.2 handout for intermediate users.
+  Copyright (c) 2021 Matplotlib Development Team.
+  Released under a CC-BY 4.0 International License.
+  Supported by NumFocus Grant \#12345.
+\par}
 
 
 
