fix NumFOCUS acknowledgement

--- a/handout-beginner.tex
+++ b/handout-beginner.tex
@@ -300,7 +300,7 @@ show the value under the mouse.
   Matplotlib 3.4.2 handout for beginners.
   Copyright (c) 2021 Matplotlib Development Team.
   Released under a CC-BY 4.0 International License.
-  Supported by NumFocus Grant \#12345.
+  Supported by NumFOCUS.
 \par}
 
 \end{multicols*}
