--- a/handout-intermediate.tex
+++ b/handout-intermediate.tex
@@ -201,7 +201,7 @@ should be 3.15$\times$3.15 in.
   Matplotlib 3.4.2 handout for intermediate users.
   Copyright (c) 2021 Matplotlib Development Team.
   Released under a CC-BY 4.0 International License.
-  Supported by NumFocus Grant \#12345.
+  Supported by NumFOCUS.
 \par}
 
 
