--- a/handout-tips.tex
+++ b/handout-tips.tex
@@ -246,7 +246,7 @@ gold-mine.
   Matplotlib 3.4.2 handout for tips \& tricks.
   Copyright (c) 2021 Matplotlib Development Team.
   Released under a CC-BY 4.0 International License.
-  Supported by NumFocus Grant \#12345.
+  Supported by NumFOCUS.
 \par}
 
 
