tight_layout is a method of fig, not ax. Closes #67.

--- a/cheatsheets.tex
+++ b/cheatsheets.tex
@@ -718,7 +718,7 @@
     ax.\textbf{tick\_params}(width=10, …)\\
     ax.\textbf{set\_axis\_[on|off]}()\\
     \\
-    ax.\textbf{tight\_layout}()\\
+    fig.\textbf{tight\_layout}()\\
     plt.\textbf{gcf}(), plt.\textbf{gca}()\\
     mpl.\textbf{rc}('axes', linewidth=1, …)\\
     fig.patch.\textbf{set\_alpha}(0)\\
