Cht add pcolormesh (#91)
* CHT: change xcorr to pcolormesh

* FIX

* FIX

* FIX

--- a/cheatsheets.tex
+++ b/cheatsheets.tex
@@ -382,6 +382,15 @@
          \optional{extent},
          \optional{origin} }
        {}
+  \plot{basic-pcolormesh.pdf}{\textbf{pcolormesh}([X],[Y],Z,…)}
+       {https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.pcolormesh.html}
+       { \optional{X},
+         \optional{Y},
+         \mandatory{Z},
+         \optional{vmin},
+         \optional{vmax},
+         \optional{cmap}}
+       {}
   \plot{basic-quiver.pdf}{\textbf{quiver}([X],[Y],U,V,…)}
      {https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.quiver.html}
      { \optional{X},
@@ -487,13 +496,6 @@
       \optional{C},
       \optional{gridsize},
        \optional{bins} }
-     {}
-  \plot{advanced-xcorr.pdf}{\textbf{xcorr}(X,Y,…)}
-     {https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.xcorr.html}
-     {\mandatory{X},
-      \mandatory{Y},
-      \optional{normed},
-      \optional{detrend} }
      {}
   \end{myboxed}
 
