Fix various typos and inconsistencies
- annotation: missing x in xycoords and "text" instead of "Annotation"
  to correspond to function call signature above
- clear a figure how-to: make code correspond to heading
- remove ticks how-to: same for yaxis as is the other how-to's
- explicitly set legend location in anatomy.py as mpl 3.5.0 "best"
  default location results in lower right corner

--- a/cheatsheets.tex
+++ b/cheatsheets.tex
@@ -968,12 +968,12 @@
     \hspace*{2.5mm}~$\rightarrow$ fig.savefig("figure.pdf")\\
     \textbf{… save a transparent figure?}\\
     \hspace*{2.5mm}~$\rightarrow$ fig.savefig("figure.pdf", transparent=True)\\
-    \textbf{… clear a figure?}\\
-    \hspace*{2.5mm}~$\rightarrow$ ax.clear()\\
+    \textbf{… clear a figure/an axes?}\\
+    \hspace*{2.5mm}~$\rightarrow$ fig.clear() $\rightarrow$ ax.clear()\\
     \textbf{… close all figures?}\\
     \hspace*{2.5mm}~$\rightarrow$ plt.close("all")\\
     \textbf{… remove ticks?}\\
-    \hspace*{2.5mm}~$\rightarrow$ ax.set\_xticks([])\\
+    \hspace*{2.5mm}~$\rightarrow$ ax.set\_[xy]ticks([])\\
     \textbf{… remove tick labels ?}\\
     \hspace*{2.5mm}~$\rightarrow$ ax.set\_[xy]ticklabels([])\\
     \textbf{… rotate tick labels ?}\\
