Update to mpl 3.5.0
- make room for two additional annotation arrow styles
- add possibility to set tick labels together with tick positions

--- a/cheatsheets.tex
+++ b/cheatsheets.tex
@@ -710,8 +710,8 @@
     ax.\textbf{grid}()\\
     ax.\textbf{set\_[xy]lim}(vmin, vmax)\\
     ax.\textbf{set\_[xy]label}(label)\\
-    ax.\textbf{set\_[xy]ticks}(list)\\
-    ax.\textbf{set\_[xy]ticklabels}(list)\\
+    ax.\textbf{set\_[xy]ticks}(ticks, [labels])\\
+    ax.\textbf{set\_[xy]ticklabels}(labels)\\
     ax.\textbf{set\_title}(title)\\
     ax.\textbf{tick\_params}(width=10, …)\\
     ax.\textbf{set\_axis\_[on|off]}()\\
