--- a/handout-intermediate.tex
+++ b/handout-intermediate.tex
@@ -83,7 +83,7 @@ the actual figure. Each element can be modified. \medskip
 % -----------------------------------------------------------------------------
 \begin{tabular}{@{}m{.821\linewidth}m{.169\linewidth}}
 \begin{lstlisting}[belowskip=-\baselineskip]
- fig, axs = plt.subplots((3,3))
+ fig, axs = plt.subplots(3,3)
  axs[0,0].set_facecolor("#ddddff")
  axs[2,2].set_facecolor("#ffffdd")
 \end{lstlisting}
